verification/operation-first-patch-run.log
PATCH-EXIT-CODE: 0
/tmp/familypilot-runtime.js:71
владелец = ${memberName(w.ownerMemberId)}`:''}`).join('
                                                      ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.23.1
RUNTIME-SYNTAX-EXIT-CODE: 1
